# NASTRAN-95-cmake

./: .gitignore  CMakeLists.txt  README.md  makefile
docs/um/: INTR.TXT  UMFL.TXT
include/: PAKBLK.COM
mds/: cputim.f  dbmdia.f  nastim.f  tdate.f
mis/: endsys.f  pexit.f  smc2cd.f  smc2cs.f  smc2rd.f  smc2rs.f  sofut.f  trd1e.f
sbin/: nastran.py
scripts/: find_binary.py  nastran.py
src/: nastplot.f  nastrn.f
src/mds/: cputim.f  dbmdia.f  dsupkc.f  nastim.f
src/mis/: endsys.f  partn3.f  pexit.f  rcard.f  rcard2.f  smc2cd.f  smc2cs.f  smc2rd.f  smc2rs.f  sofut.f  trd1e.f
um/: BULK.TXT  CASE.TXT  SUBS.TXT
